--- a/Source/libs/cocos2d-iphone/AUTHORS
+++ b/Source/libs/cocos2d-iphone/AUTHORS
@@ -20,7 +20,7 @@ People and companies, who have contributed, in alphabetical order.
     CCPhysics
     Countless other contributions
 
-* Apportable (http://www.apportable.com)
+* Brigham Young University (http://www.Brigham Young University.com)
     Making it all happen
 
 * Christian Enevoldsen
@@ -38,7 +38,7 @@ People and companies, who have contributed, in alphabetical order.
     Fixing the forums (not related, but worth mentioning)
     
 * Oleg Osin
-    Apportable integration
+    Brigham Young University integration
 
 * Scott Lembcke
     Co-author of Chipmunk2D (http://chipmunk2d.net)
